[gd_scene load_steps=2 format=3 uid="uid://psm5qtp5h38i"]

[ext_resource type="Script" uid="uid://chxenx3uyiued" path="res://HUD/hud.gd" id="1_2fwl4"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2fwl4")

[node name="VerticalContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HprizontalContainer" type="HBoxContainer" parent="VerticalContainer"]
layout_mode = 2

[node name="Score" type="Label" parent="VerticalContainer/HprizontalContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "  Счет "

[node name="LeftPoints" type="Label" parent="VerticalContainer/HprizontalContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "0"

[node name="dots" type="Label" parent="VerticalContainer/HprizontalContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = ":"

[node name="RightPoints" type="Label" parent="VerticalContainer/HprizontalContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "0"

[node name="Globals" type="Label" parent="VerticalContainer/HprizontalContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 34
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="VerticalContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VerticalContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "  Время "

[node name="TimerLabel" type="Label" parent="VerticalContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "00:00"

[node name="CountdownLabel" type="Label" parent="."]
layout_mode = 2
offset_top = 82.0
offset_right = 1152.0
offset_bottom = 219.0
theme_override_constants/outline_size = 13
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 70
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CountDownTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="EndGameTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CountDownTimer" to="." method="_on_count_down_timer_timeout"]
[connection signal="timeout" from="EndGameTimer" to="." method="_on_end_game_timer_timeout"]
